# sample-gpu-accelerated-transformer-Qwen2-0.5B

transformer-main/: .gitignore  CMakeLists.txt  README.md
transformer-main/profiling/: README.md
transformer-main/pyref/: README.md  main.py  qwen2.py  rope.py
transformer-main/src/: BPE.cpp  BPE.h  CudaBuffer.cu  CudaBuffer.cuh  ErrorCheck.h  HostBuffer.cpp  HostBuffer.h  main.cu
transformer-main/src/gpu_ops/: ArgMax.cu  ArgMax.cuh  GroupQueryAttention.cuh  LayerNorm.cu  LayerNorm.cuh  MatrixVectorMultiply.cu  MatrixVectorMultiply.cuh  RoPE.cu  RoPE.cuh  SiLUMult.cu  SiLUMult.cuh
transformer-main/src/qwen2/: Qwen2Config.h  Qwen2Layer.cuh  Qwen2Loader.cu  Qwen2Loader.h  Qwen2Model.cuh
transformer-main/src/tests/: ArgMaxTest.cu  BPETest.cu  GQATest.cu  LayerNormTest.cu  MatVecMultTest.cu  RoPETest.cu  SiLUMultTest.cu  TestUtils.cuh
